NullPointerException
- Check against null-value during leveling import